k8/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simplcommerce
  namespace: simplcommerce
  labels:
    app: simplcommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: simplcommerce
    spec:
      containers:
      - name: simplcommerce
        image: ba2017/simplcommerce:v0.15-local
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
