k8/mssql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mssql-simplcommerce
  namespace: simplcommerce
  labels:
    app: mssql-simplcommerce
spec:
  template:
    metadata:
      labels:
        app: mssql-simplcommerce
    spec:
      containers:
      - name: mssql-simplcommerce
        image: microsoft/mssql-server-linux:ctp1-4
        # resources:
        #   requests:
        #     memory: "3.25Gi"
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-simplcommerce
          mountPath: "/var/opt/mssql/data"
      volumes:
      - name: mssql-simplcommerce
        persistentVolumeClaim:
          claimName: mssql-simplcommerce
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-simplcommerce
  namespace: simplcommerce
  labels:
    app: mssql-simplcommerce
spec:
  selector:
    app: mssql-simplcommerce
  ports:
  - port: 1433
    targetPort: 1433
