k8/adfs-cert.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: adfs-cert
  namespace: simplcommerce
  labels:
    # let kube-cert-manager generate an SSL certificate
    stable.k8s.psg.io/kcm.class: "default"
spec:
  tls:
  - hosts:
    - adfs.zhaw.tk
    secretName: adfs-tls-cert
  rules:
  - host: adfs.zhaw.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: simplcommerce
          servicePort: 80
