k8/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplcommerce
  namespace: simplcommerce
  labels:
    # let kube-cert-manager generate an SSL certificate
    stable.k8s.psg.io/kcm.class: "default"
spec:
  tls:
  - hosts:
    - simpl.zhaw.tk
    secretName: simplcommerce-tls-cert
  rules:
  - host: simpl.zhaw.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: simplcommerce
          servicePort: 80
